--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 </div> -->
 
                 <div class="main-header__copy__text">
-                    <p><h4>"Escribir el título del Proyecto"</h4></p>
-                    <p>Escribir descripción del problema a resolver.</p>
-                    <p>Escribir descripción de página web como herramienta de control de avances.</p>
+                    <p><h4>"Suspensión Electromagnética"</h4></p>
+                    <p>Relsolver el conflicto de la tracción en los automóviles en diferentes carreteras conflictivas.</p>
+                    <p>Mediante la suspensión eléctromagnética mejorar y perfeccionar el equilibrio de la carroceria de un automóvil cuando este recibe los cambios en la tracción de fuerza.</p>
 
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 <h4>Acerca de Nosotros</h4>
             </div>
             <div class="about__content">
-                <p>Describir el equipo de trabajo sus actividades en las que son realmente hábiles</p>
+                <p>Somos un grupo de compañeros que estudiamos la electricidad y sus funcionalidades, buscamos mejoras y avances y con nuestro proyecto en lo más probable poder cambiar algo, además de conocer la Electrotecnia Industrial nos desempeñamos en otros campos como la electrónica y la mecánica.</p>
             </div>
         </div>
     </div>
@@ -82,12 +82,12 @@
                     <img src="img/Foto_Integrante_1.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                    <p class="team__item__description__name">Integrante 1</p>
-                    <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                    <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                    <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                    <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                    <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                    <p class="team__item__description__name">Marco Antonio Apaza Rivera</p>
+                    <p class="team__item__description__info">Me gusta escuchar música, cocinar, salir a pasear con mi familia. No soy muy bueno en temas teóricos pero si en la práctica y los taleres, soy muy bueno para socializar cn dempas personas que incluso sean muy desconocidas.</p>
+                    <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
+                    <p class="team__item__description__cal">Rol Secundario: <strong>Coordinador</strong></p>
+                    <p class="team__item__description__cal">Numero de Celular: <strong>962685202</strong></p>
+                    <a href="mailto:marco.apaza.r@tecsup.edu.pe" class="team__item__description__mail">marco.apaza.r@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -95,12 +95,12 @@
                     <img src="img/Foto_Integrante_2.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Integrante 2</p>
-                  <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                  <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                  <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <p class="team__item__description__name">Marcos Rubén Ortega Castro</p>
+                  <p class="team__item__description__info">mi hobby es cantar, escuchar musica y manejar moto, en cuanto a trabajo, me gusta mas trabajar en campo. Trabajo en equipo y me desemvuelto rapidamente</p>
+                  <p class="team__item__description__cal">Rol principal: <strong>Explorador</strong></p>
+                  <p class="team__item__description__cal">Rol Secundario: <strong>Constructor</strong></p>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>953673307</strong></p>
+                  <a href="mailto:marcos.ortega@tecsup.edu.pe" class="team__item__description__mail">marcos.ortega@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -108,12 +108,12 @@
                     <img src="img/Foto_Integrante_3.jpg" alt="">
                 </div>
                 <div class="team__item__description">
-                  <p class="team__item__description__name">Integrante 3</p>
-                  <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                  <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                  <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                  <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                  <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                  <p class="team__item__description__name">Jhosep Daniel Ramos Llano</p>
+                  <p class="team__item__description__info">Me gusta escuchar música y salir a distraerme, tengo una gran persistencia a la hora de aprender en talleres y prácticas, soy muy hábil para volver a intentar las cosas si no me salen, tengo mucha determinación como para las cosas me salgan bien, me gusta lograr casi todas mis metas.</p>
+                  <p class="team__item__description__cal">Rol principal: <strong>Constructor</strong></p>
+                  <p class="team__item__description__cal">Rol Secundario: <strong>Explorador</strong></p>
+                  <p class="team__item__description__cal">Numero de Celular: <strong>936629493</strong></p>
+                  <a href="mailto:jhosep.ramos@tecsup.edu.pe" class="team__item__description__mail">jhosep.ramos@tecsup.edu.pe</a>
                 </div>
             </div>
             <div class="team__item">
@@ -121,26 +121,15 @@
                         <img src="img/Foto_Integrante_4.jpg" alt="">
                     </div>
                     <div class="team__item__description">
-                      <p class="team__item__description__name">Integrante 4</p>
-                      <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                      <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                      <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                      <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                      <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
+                      <p class="team__item__description__name">Jose Carlos Ugarte Condori</p>
+                      <p class="team__item__description__info">Me gusta escribir, dibujar, tocar la trompeta, aprender nuevos instrumentos e investigar sobre cosas que pasan en el mundo, me considero hábil para la tecnología ya que suelo aprender los funcionamientos muy rápido, hábil para hablar en público y componer cosas o proyectos aunque no siempre la idea principal las ideo yo, soy bueno organizando a todos para que las ideas funcionen.</p>
+                      <p class="team__item__description__cal">Rol principal: <strong>Coordinador</strong></p>
+                      <p class="team__item__description__cal">Rol Secundario: <strong>Comunicador</strong></p>
+                      <p class="team__item__description__cal">Numero de Celular: <strong>968968449</strong></p>
+                      <a href="mailto:jose.ugarte@tecsup.edu.pe" class="team__item__description__mail">jose.ugarte@tecsup.edu.pe</a>
                     </div>
                 </div>
-                <div class="team__item">
-                        <div class="team__item__img">
-                            <img src="img/Foto_Integrante_5.jpg" alt="">
-                        </div>
-                        <div class="team__item__description">
-                          <p class="team__item__description__name">Integrante 5</p>
-                          <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
-                          <p class="team__item__description__cal">Rol principal: <strong>Escribir el rol principal asignado</strong></p>
-                          <p class="team__item__description__cal">Rol Secundario: <strong>Escribir el rol secundario asignado</strong></p>
-                          <p class="team__item__description__cal">Numero de Celular: <strong>999999999</strong></p>
-                          <a href="mailto:escribir_correo_institucional@tecsup.edu.pe" class="team__item__description__mail">escribir_correo_institucional@tecsup.edu.pe</a>
-                        </div>
+
                     </div>
         </div>
     </div>
