--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 			<li><a href="index.html">Inicio</a></li>
             <li><a href="">Acerca de Nosotros</a>
 				<ul>
-                    <li><a href="Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante2.html">Integrante 2</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante5.html">Integrante 5</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante1.html">Marco Antonio Apaza Rivera</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante2.html">Marcos Rubén Ortega Castro</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante3.html">Jhosep Daniel Ramos Llano</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante4.html">Jose Carlos Ugarte Condori</a></li>
+
                 </ul>
              </li>
             <li><a href="Proyecto_Innovacion.html">Proyecto de Innovación</a>
