--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Foto_Integrante_1.jpg" alt="">
+                    <img src="img/marcoa.jpg" alt="">
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Marco Antonio Apaza Rivera</p>
@@ -92,7 +92,7 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Foto_Integrante_2.jpg" alt="">
+                    <img src="img/marcoso.png" alt="">
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Marcos Rubén Ortega Castro</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="team__item">
                 <div class="team__item__img">
-                    <img src="img/Foto_Integrante_3.jpg" alt="">
+                    <img src="img/jhosepr.jpg" alt="">
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Jhosep Daniel Ramos Llano</p>
@@ -118,7 +118,7 @@
             </div>
             <div class="team__item">
                     <div class="team__item__img">
-                        <img src="img/Foto_Integrante_4.jpg" alt="">
+                        <img src="img/joseu.jpg" alt="">
                     </div>
                     <div class="team__item__description">
                       <p class="team__item__description__name">Jose Carlos Ugarte Condori</p>
