--- a/Curriculum_Vitae/Integrante1.html
+++ b/Curriculum_Vitae/Integrante1.html
@@ -22,11 +22,11 @@
 			<li><a href="../index.html">Inicio</a></li>
             <li><a href="">Acerca de Nosotros</a>
 				<ul>
-                    <li><a href="Integrante1.html">Integrante 1</a></li>
-                    <li><a href="Integrante2.html">Integrante 2</a></li>
-                    <li><a href="Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Integrante5.html">Integrante 5</a></li>
+                    <li><a href="Integrante1.html">Marco Antonio Apaza Rivera</a></li>
+                    <li><a href="Integrante2.html">Marcos Rubén Ortega Castro</a></li>
+                    <li><a href="Integrante3.html">Jhosep Daniel Ramos Llano</a></li>
+                    <li><a href="Integrante4.html">Jose Carlos Ugarte Condori</a></li>
+
                 </ul>
              </li>
             <li><a href="">Proyecto de Innovación</a>
@@ -46,22 +46,22 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Escribir Nombre de Integrante 1</h1>
+                <h1>Marco Antonio Apaza Rivera</h1>
             </div>
             <div class="think__title__content">
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTXUL9QOWmvujeudm_XkXUD7GC1I0fOzoHeWYZTUopqZ-6xskNRaMwp_T2ePbByrZzYyAWQ1btmDsPm/pub?embedded=true" height="560" width="600"></iframe>
+              <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ3gS4_jXBHC15pVkJ3BZF8eXTl-Zv9Cg5-8v4JgdqZqLfYCjFgz7-Q6_bcQ5_dm6K-TF1p85LndyJt/pub?embedded=true" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Escribir como título "RESUMEN DE CURRICULUM VITAE"</p>
-                    <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
+                    <p class="think__details__info__cont">Mi nombre es Marco Antonio Apaza Rivera soy estudiante de TECSUP en la carrera Electrotecnia Industrial, con DNI 73462624 actualmente tengo 18 años, nacido en lima. Aun no tengo experiencia laboral, pero tengo noción de como manejar WORD y EXCEL, soy optimista por ende si no se como realizar un trabajo, ese optimismo ayuda a querer aprender y poder realizar el trabajo.</p><a href="https://drive.google.com/open?id=1NQJ_Vq7bf1xr22MkSuw3UsJBQg2XQRcR" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
