--- a/Curriculum_Vitae/Integrante2.html
+++ b/Curriculum_Vitae/Integrante2.html
@@ -22,11 +22,10 @@
 			<li><a href="../index.html">Inicio</a></li>
             <li><a href="">Acerca de Nosotros</a>
 				<ul>
-                    <li><a href="Integrante1.html">Integrante 1</a></li>
-                    <li><a href="Integrante2.html">Integrante 2</a></li>
-                    <li><a href="Integrante3.html">Integrante 3</a></li>
-                    <li><a href="Integrante4.html">Integrante 4</a></li>
-                    <li><a href="Integrante5.html">Integrante 5</a></li>
+          <li><a href="Integrante1.html">Marco Antonio Apaza Rivera</a></li>
+          <li><a href="Integrante2.html">Marcos Rubén Ortega Castro</a></li>
+          <li><a href="Integrante3.html">Jhosep Daniel Ramos Llano</a></li>
+          <li><a href="Integrante4.html">Jose Carlos Ugarte Condori</a></li>
                 </ul>
              </li>
             <li><a href="">Proyecto de Innovación</a>
@@ -46,22 +45,22 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Escribir Nombre de Integrante 2</h1>
+                <h1>Marcos Rubén Ortega Castro</h1>
             </div>
             <div class="think__title__content">
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTXUL9QOWmvujeudm_XkXUD7GC1I0fOzoHeWYZTUopqZ-6xskNRaMwp_T2ePbByrZzYyAWQ1btmDsPm/pub?embedded=true" height="560" width="600"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vSAzu1-aeawpSYQQhDoccX5SDjYPwB7y7TLWpD_K1HpP6xdjHJVrz1G7uBRxzZ-ZREQhxepEnRsrEWb/pub?embedded=true" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Escribir como título "RESUMEN DE CURRICULUM VITAE"</p>
-                    <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
+                    <p class="think__details__info__cont"> Me considero una persona responsable, creativa con iniciativa y puntualidad. Tengo mucho interés por la actualización profesional y estoy adaptado a trabajar bajo presión, soy una persona de buenos valores y con un desempeño laboral muy agradable para cualquier tipo de empresa por lo cual soy apto para trazarme nuevas metas cada día.</p><a href="https://drive.google.com/open?id=1Tp5xxLcwCbi60xGKc9LO1aDWKzxbTnC2" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
