--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -45,22 +45,22 @@
     <div id="think">
         <div class="think__title">
             <div class="think__title__text">
-                <h1>Escribir Nombre de Integrante 4</h1>
+                <h1>Jose Carlos Ugarte Condori</h1>
             </div>
             <div class="think__title__content">
         </div>
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTXUL9QOWmvujeudm_XkXUD7GC1I0fOzoHeWYZTUopqZ-6xskNRaMwp_T2ePbByrZzYyAWQ1btmDsPm/pub?embedded=true" height="560" width="600"></iframe>
+              <iframe src="https://docs.google.com/document/d/e/2PACX-1vQXomb6kTGM9lJxtBnREZgOP2A4q1AVLTNKSH0ezxzAkfOWAEVNkbMN8ZlU-nZCy6i2GdiYWZpAqXkr/pub?embedded=true" height="560" width="600"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Escribir como título "RESUMEN DE CURRICULUM VITAE"</p>
-                    <p class="think__details__info__cont">     Extracto profesional: descripción general de su experiencia,  áreas de conocimientos, fortalezas, funciones que ha desempeñado y cargos que ha tenido. Resuma en un párrafo lo más relevante de su carrera profesional, piense con detenimiento ya que es el primer contacto con un reclutador y debe decir lo que quiere transmitir con pocas palabras. No es necesario detallar la experiencia, tendrá oportunidad de hacerlo más adelante, describa las capacidades por las que debe ser contratado.</p><a href="https://drive.google.com/file/d/1UVY8x5f1ws-C-1tX_AOVW2XzvCrxNJ54/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
+                    <p class="think__details__info__cont">    Mi nombre es Jose Ugarte Condori, identificado con DNI 77379935, Soy una persona con mucha perserverancia, no me daré por vencido si es que las cosas salen mal, además llevo en mis fortalezas la puntualidad, la honestidad y la confianza. Mi experiencia laboral aun es muy poca, me he desempeñado más en el ámbito artístico, aún así estoy preparado para los desafíos que conlleva la Electrotecnia Industrial y los trabajos futuros.</p><a href="https://drive.google.com/open?id=1MEXgUm6pssKBmXGXvUFMKtGyPrnWH29s" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
