--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -22,11 +22,10 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="">Acerca de nosotros</a>
                     <ul>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 2</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 3</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 4</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 5</a></li>
+                      <li><a href="Integrante1.html">Marco Antonio Apaza Rivera</a></li>
+                      <li><a href="Integrante2.html">Marcos Rubén Ortega Castro</a></li>
+                      <li><a href="Integrante3.html">Jhosep Daniel Ramos Llano</a></li>
+                      <li><a href="Integrante4.html">Jose Carlos Ugarte Condori</a></li>
                     </ul>
                  </li>
                 <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
@@ -52,7 +51,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vRJS6IXDCrNE4OwoeOeMb1VLIfDwb7O5BtrCpak-JhrXbDOKwTb_50BcNLzG8jDfP-D-Iz1zELgrGl_/pub?embedded=true" height="560" width="560"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vS5bwFXEwxUblb9tKgvik0KKJH72l3cFU4C7lUx82W5ykdxFcUAnYSszzTQIjgjzQBqLFX80FV2UfvA/pub?embedded=true"height="560" width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -60,32 +59,10 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
-                    <p class="think__details__extra__description">Desarrollar cada criterio de evaluación, si existen imágenes o videos colocarlos en el lado izquierdo de la página referenciando los mismos.</p>
+                    <p class="think__details__extra__description">En esta ocación desarrollaremos mediante un informe los avances próximos y visiones posibles a lo que se prevee sea nuestro proyecto, en este caso desenvolveremos los puntos más importantes para como ya se ha dicho el "emprendimiento" de nuestro proyecto.</p>
 
-                </div>
 
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 1</p>
-                    <p class="think__details__extra__description">Entienden que emprender es cuestión de problemas y capacidades según los casos de estudio.</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 2</p>
-                    <p class="think__details__extra__description">Identifican sus capacidades para emprender.</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 3</p>
-                    <p class="think__details__extra__description">Planifican el Proceso.</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 4</p>
-                    <p class="think__details__extra__description">Entienden que emprender es una actividad en equipo.</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 5</p>
-                    <p class="think__details__extra__description">En la creación de equipos se asignan roles principales y secundarios.</p>
-                    <br>
-                    Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/1L0N1IZaw4q0WcoVhj6nV1DBS4MiyI2Kw/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/open?id=17PQRy4GsvQxxnFt6SgV46qZgWreUlc7e" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
