--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 <div class="main-header__copy__text">
                     <p><h4>"Suspensión Electromagnética"</h4></p>
                     <p>Relsolver el conflicto de la tracción en los automóviles en diferentes carreteras conflictivas.</p>
-                    <p>Mediante la suspensión eléctromagnética mejorar y perfeccionar el equilibrio de la carroceria de un automóvil cuando este recibe los cambios en la tracción de fuerza.</p>
+                    <p>Mediante la suspensión eléctromagnética mejorar y perfeccionar el equilibrio de la carroceria de un automóvil cuando este recibe los cambios en la tracción de fuerza.
+                    Por medio de esta página web se mantendrá una gestión constante del proyecto que se lleva a cabo.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/HPIzoRP05j4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
