--- a/Actividades/Actividad2.html
+++ b/Actividades/Actividad2.html
@@ -22,11 +22,10 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="">Acerca de nosotros</a>
                     <ul>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 2</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 3</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 4</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 5</a></li>
+                      <li><a href="Integrante1.html">Marco Antonio Apaza Rivera</a></li>
+                      <li><a href="Integrante2.html">Marcos Rubén Ortega Castro</a></li>
+                      <li><a href="Integrante3.html">Jhosep Daniel Ramos Llano</a></li>
+                      <li><a href="Integrante4.html">Jose Carlos Ugarte Condori</a></li>
                     </ul>
                  </li>
                 <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
@@ -52,7 +51,7 @@
 
         <div class="think">
             <div class="think__img">
-              <iframe src="https://docs.google.com/document/d/e/2PACX-1vQHB7a1FD1ocUt19RLZZ8b13zBcF3i7bdRdpw0bAaaNZCLINF6FDmb956BgW8Y7uewbyFxDkOZveOLg/pub?embedded=true"height="560"width="560"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vQNbnVxsoKAYxtZAh44LG4xW_yVO1SZiSIh9g6uwK_joBv-5pS-bzXLLAYKYbmjafkEc3im_T9M5rmp/pub?embedded=true"height="560"width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -60,27 +59,9 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
-                    <p class="think__details__extra__description">Desarrollar cada criterio de evaluación, si existen imágenes o videos colocarlos en el lado izquierdo de la página referenciando los mismos.</p>
+                    <p class="think__details__extra__description">En esta actividad enfocaremos nuestros objetivos a las razones de los problemas, su existencia y el porqué es importante hallar diferentes tipos de problemas existentes en la sociedad, de los cuales uno de los pocos o un grupo pequeño de ellos han sido el causante principal para que nuestro proyecto sea formulado y analizado para ser útil y funcional.</p>
 
-                </div>
-
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 1</p>
-                    <p class="think__details__extra__description">Entienden que las oportunidades para emprender se originan en problemas y oportunidades que forman parte de nuestro día a día</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 2</p>
-                    <p class="think__details__extra__description">Observar la realidad con actitud Critica.</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 3</p>
-                    <p class="think__details__extra__description">Ser capaces de incorporrar los diferentes trabajos individuales a la visión global del equipo.</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 4</p>
-                    <p class="think__details__extra__description">Aplicar como equipo criterios objetivos para la toma de decisiones.</p>
-                    Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/1QT-zHM0tiuet6gWkOP-D_VBVv_djwjdR/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/open?id=1SbH6hBa41DaSjswadnXcOmVjJ1x8a58KaSwx_ex_WEA" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
