--- a/Actividades/Actividad3.html
+++ b/Actividades/Actividad3.html
@@ -22,11 +22,10 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="">Acerca de nosotros</a>
                     <ul>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 1</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 2</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 3</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 4</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante1.html">Integrante 5</a></li>
+                      <li><a href="Integrante1.html">Marco Antonio Apaza Rivera</a></li>
+                      <li><a href="Integrante2.html">Marcos Rubén Ortega Castro</a></li>
+                      <li><a href="Integrante3.html">Jhosep Daniel Ramos Llano</a></li>
+                      <li><a href="Integrante4.html">Jose Carlos Ugarte Condori</a></li>
                     </ul>
                  </li>
                 <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
@@ -52,7 +51,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTpbq1M0DyjT1TXRRfc8RXFRpyTvME7nN9s2yqu4zmQEnQHAhC2OjGaoPjDnA-wzTsGHKEylduTbPEG/pub?embedded=true"height="560" width="560"></iframe>
+                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTxtafYj_I1vzIQEoRyQ5G3lu7IyVMu5T4pClDuElEu_MEPykui1L9e2zGQDcZuICveo7L43PdxmqB0/pub?embedded=true"height="560" width="560"></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -65,35 +64,19 @@
                 </div>
 
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 1</p>
-                    <p class="think__details__extra__description">Construir un mapa de conocimientos como primer paso para resolver cualquier problema.</p>
+                    <p class="think__details__extra__title">Creatividad</p>
+                    <p class="think__details__extra__description">Uno de los puntos más importantes a explicar será el término de la creatividad, básico y fundamental en un proyecto..</p>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 2</p>
-                    <p class="think__details__extra__description"> Entender que resulta fundamental conocer el contexto de la oportunidad para poder emprender con éxito.</p>
+                    <p class="think__details__extra__title">Propuestas creativas y Promoción</p>
+                    <p class="think__details__extra__description">Aquí damos ejemplos posibles respecto a lo que presentamos para poder demostrar un poco como nos damos a entender con el público</p>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 3</p>
-                    <p class="think__details__extra__description">Saber realizar la búsqueda de información de forma sistemática.</p>
+                    <p class="think__details__extra__title">Valoración de las ideas </p>
+                    <p class="think__details__extra__description">Resaltaremos datos importantes a tomar respecto a nuestras posibles presentaciones y futuras promociones del trabajo en sí</p>
                 </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 4</p>
-                    <p class="think__details__extra__description">Entender que el proceso creativo se orienta en función de un análisis previo del problema.</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 5</p>
-                    <p class="think__details__extra__description">Conocer y aplicar técnicas de creatividad.</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 6</p>
-                    <p class="think__details__extra__description">Asumir que la creatividad es una técnica y que puede utilizarse de forma estructurada.</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Criterio de evaluación 7</p>
-                    <p class="think__details__extra__description">Interiorizar que las ideas hay que valorarlas en función de criterios objetivos.</p>
-                    <br>
-                    Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/1lCvi9MP2oigRW78v1uBQRCpbhWjrD03G/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+
+                    <a href="https://drive.google.com/open?id=1sjauxllTpxS3QNqwLdY6IB5AuZsO20EM" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
