--- a/Curriculum_Vitae/Integrante1.html
+++ b/Curriculum_Vitae/Integrante1.html
@@ -53,7 +53,7 @@
 
         <div class="think">
             <div class="think__img">
-              <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ3gS4_jXBHC15pVkJ3BZF8eXTl-Zv9Cg5-8v4JgdqZqLfYCjFgz7-Q6_bcQ5_dm6K-TF1p85LndyJt/pub?embedded=true" height="560" width="600"></iframe>
+            <embed src="marcoapaza.pdf" type="application/pdf" width="600" height="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -61,7 +61,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
-                    <p class="think__details__info__cont">Mi nombre es Marco Antonio Apaza Rivera soy estudiante de TECSUP en la carrera Electrotecnia Industrial, con DNI 73462624 actualmente tengo 18 años, nacido en lima. Aun no tengo experiencia laboral, pero tengo noción de como manejar WORD y EXCEL, soy optimista por ende si no se como realizar un trabajo, ese optimismo ayuda a querer aprender y poder realizar el trabajo.</p><a href="https://drive.google.com/open?id=1NQJ_Vq7bf1xr22MkSuw3UsJBQg2XQRcR" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont">Mi nombre es Marco Antonio Apaza Rivera soy estudiante de TECSUP en la carrera Electrotecnia Industrial, con DNI 73462624 actualmente tengo 18 años, nacido en lima. Aun no tengo experiencia laboral, pero tengo noción de como manejar WORD y EXCEL, soy optimista por ende si no se como realizar un trabajo, ese optimismo ayuda a querer aprender y poder realizar el trabajo.</p><a href="https://drive.google.com/file/d/12JJceun7Yd2LtJrM7IcHXvh3mpZeFMIy/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
