--- a/Curriculum_Vitae/Integrante3.html
+++ b/Curriculum_Vitae/Integrante3.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-              <iframe src="https://docs.google.com/document/d/e/2PACX-1vTHYsadvvacQr0ik_pYcVMVnTveuWVLgwSLlg1qTD0yVckTtYtLoADarcV2DWEw90BXNZ9ygpntdMXA/pub?embedded=true" height="560" width="600"></iframe>
+              <embed src="jhosepramos.pdf" type="application/pdf" width="600" height="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -60,7 +60,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
-                    <p class="think__details__info__cont">    Me considero una persona responsable creativa con iniciativa , puntualidad y con honestidad, asumo con agrado los retos y metas, excelente manejo en relaciones interpersonales. Adaptado a trabajar bajo presión,entrenado en Herramientas modernas de Internet y Microsoft Office completo. Idioma inglés básico.</p><a href="https://drive.google.com/open?id=0B1kZ2NPvZM68aU40VG1ub1Y3azZJdGhqMGY0LTlFUjFQV2Nj" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont">    Me considero una persona responsable creativa con iniciativa , puntualidad y con honestidad, asumo con agrado los retos y metas, excelente manejo en relaciones interpersonales. Adaptado a trabajar bajo presión,entrenado en Herramientas modernas de Internet y Microsoft Office completo. Idioma inglés básico.</p><a href="https://drive.google.com/file/d/13HiP1GaZfP9NnzykoF2hpix-mB4v9VNk/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
