--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-              <iframe src="https://docs.google.com/document/d/e/2PACX-1vQXomb6kTGM9lJxtBnREZgOP2A4q1AVLTNKSH0ezxzAkfOWAEVNkbMN8ZlU-nZCy6i2GdiYWZpAqXkr/pub?embedded=true" height="560" width="600"></iframe>
+            <embed src="joseugarte.pdf" type="application/pdf" width="600" height="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -60,7 +60,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
-                    <p class="think__details__info__cont">    Mi nombre es Jose Ugarte Condori, identificado con DNI 77379935, Soy una persona con mucha perserverancia, no me daré por vencido si es que las cosas salen mal, además llevo en mis fortalezas la puntualidad, la honestidad y la confianza. Mi experiencia laboral aun es muy poca, me he desempeñado más en el ámbito artístico, aún así estoy preparado para los desafíos que conlleva la Electrotecnia Industrial y los trabajos futuros.</p><a href="https://drive.google.com/open?id=1MEXgUm6pssKBmXGXvUFMKtGyPrnWH29s" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont">    Mi nombre es Jose Ugarte Condori, identificado con DNI 77379935, Soy una persona con mucha perserverancia, no me daré por vencido si es que las cosas salen mal, además llevo en mis fortalezas la puntualidad, la honestidad y la confianza. Mi experiencia laboral aun es muy poca, me he desempeñado más en el ámbito artístico, aún así estoy preparado para los desafíos que conlleva la Electrotecnia Industrial y los trabajos futuros.</p><a href="https://drive.google.com/file/d/1ZSsJ5vUrv18CVx2Ng4IqZ9Bf01QXa7-S/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
