--- a/Curriculum_Vitae/Integrante2.html
+++ b/Curriculum_Vitae/Integrante2.html
@@ -52,7 +52,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vSAzu1-aeawpSYQQhDoccX5SDjYPwB7y7TLWpD_K1HpP6xdjHJVrz1G7uBRxzZ-ZREQhxepEnRsrEWb/pub?embedded=true" height="560" width="600"></iframe>
+  <embed src="marcosortega.pdf" type="application/pdf" width="600" height="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -60,7 +60,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">RESUMEN DE CURRICULUM VITAE</p>
-                    <p class="think__details__info__cont"> Me considero una persona responsable, creativa con iniciativa y puntualidad. Tengo mucho interés por la actualización profesional y estoy adaptado a trabajar bajo presión, soy una persona de buenos valores y con un desempeño laboral muy agradable para cualquier tipo de empresa por lo cual soy apto para trazarme nuevas metas cada día.</p><a href="https://drive.google.com/open?id=1Tp5xxLcwCbi60xGKc9LO1aDWKzxbTnC2" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
+                    <p class="think__details__info__cont"> Me considero una persona responsable, creativa con iniciativa y puntualidad. Tengo mucho interés por la actualización profesional y estoy adaptado a trabajar bajo presión, soy una persona de buenos valores y con un desempeño laboral muy agradable para cualquier tipo de empresa por lo cual soy apto para trazarme nuevas metas cada día.</p><a href="https://drive.google.com/file/d/13E-iX14yVpm29tCFjs30WcDVlXLG7iTI/view?usp=sharing" target="_blank" class="think__details__extra__description">Descargue aquí Curriculum Vitae</a>
                 </div>
 
                 <!-- <div class="think__details__extra">
