--- a/Actividades/Actividad2.html
+++ b/Actividades/Actividad2.html
@@ -51,7 +51,7 @@
 
         <div class="think">
             <div class="think__img">
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vQNbnVxsoKAYxtZAh44LG4xW_yVO1SZiSIh9g6uwK_joBv-5pS-bzXLLAYKYbmjafkEc3im_T9M5rmp/pub?embedded=true"height="560"width="560"></iframe>
+            <embed src="ACT2.pdf" type="application/pdf" width="550" height="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -77,7 +77,7 @@
                                      <p class="think__details__extra__title">Criterio de evaluación 4</p>
                                      <p class="think__details__extra__description">Aplicar como equipo criterios objetivos para la toma de decisiones.</p>
 
-                    <a href="https://drive.google.com/open?id=1SbH6hBa41DaSjswadnXcOmVjJ1x8a58KaSwx_ex_WEA" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/1AeGBtRC3kZWJoPIZ7Q-CYZTMYKrGjzRi/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
