--- a/Actividades/Actividad3.html
+++ b/Actividades/Actividad3.html
@@ -51,7 +51,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTxtafYj_I1vzIQEoRyQ5G3lu7IyVMu5T4pClDuElEu_MEPykui1L9e2zGQDcZuICveo7L43PdxmqB0/pub?embedded=true"height="560" width="560"></iframe>
+                <embed src="ACT3.pdf" type="application/pdf" width="550" height="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -60,23 +60,38 @@
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
                     <p class="think__details__extra__description">Desarrollar cada criterio de evaluación, si existen imágenes o videos colocarlos en el lado izquierdo de la página referenciando los mismos.</p>
+                  </div>
 
-                </div>
+                                  <div class="think__details__extra">
+                                      <p class="think__details__extra__title">Criterio de evaluación 1</p>
+                                      <p class="think__details__extra__description">Construir un mapa de conocimientos como primer paso para resolver cualquier problema.</p>
+                                  </div>
+                                  <div class="think__details__extra">
+                                      <p class="think__details__extra__title">Criterio de evaluación 2</p>
+                                      <p class="think__details__extra__description"> Entender que resulta fundamental conocer el contexto de la oportunidad para poder emprender con éxito.</p>
+                                  </div>
+                                  <div class="think__details__extra">
+                                      <p class="think__details__extra__title">Criterio de evaluación 3</p>
+                                      <p class="think__details__extra__description">Saber realizar la búsqueda de información de forma sistemática.</p>
+                                  </div>
+                                  <div class="think__details__extra">
+                                      <p class="think__details__extra__title">Criterio de evaluación 4</p>
+                                      <p class="think__details__extra__description">Entender que el proceso creativo se orienta en función de un análisis previo del problema.</p>
+                                  </div>
+                                  <div class="think__details__extra">
+                                      <p class="think__details__extra__title">Criterio de evaluación 5</p>
+                                      <p class="think__details__extra__description">Conocer y aplicar técnicas de creatividad.</p>
+                                  </div>
+                                  <div class="think__details__extra">
+                                      <p class="think__details__extra__title">Criterio de evaluación 6</p>
+                                      <p class="think__details__extra__description">Asumir que la creatividad es una técnica y que puede utilizarse de forma estructurada.</p>
+                                  </div>
+                                  <div class="think__details__extra">
+                                      <p class="think__details__extra__title">Criterio de evaluación 7</p>
+                                      <p class="think__details__extra__description">Interiorizar que las ideas hay que valorarlas en función de criterios objetivos.</p>
+                                      <br>
 
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Creatividad</p>
-                    <p class="think__details__extra__description">Uno de los puntos más importantes a explicar será el término de la creatividad, básico y fundamental en un proyecto..</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Propuestas creativas y Promoción</p>
-                    <p class="think__details__extra__description">Aquí damos ejemplos posibles respecto a lo que presentamos para poder demostrar un poco como nos damos a entender con el público</p>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Valoración de las ideas </p>
-                    <p class="think__details__extra__description">Resaltaremos datos importantes a tomar respecto a nuestras posibles presentaciones y futuras promociones del trabajo en sí</p>
-                </div>
-
-                    <a href="https://drive.google.com/open?id=1sjauxllTpxS3QNqwLdY6IB5AuZsO20EM" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/1KLGDxJRuRIa5B7bIs2YgCurFh2IlFREt/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
