--- a/Actividades/Actividad3.html
+++ b/Actividades/Actividad3.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
-                    <p class="think__details__extra__description">Desarrollar cada criterio de evaluación, si existen imágenes o videos colocarlos en el lado izquierdo de la página referenciando los mismos.</p>
+                    <p class="think__details__extra__description">En este informe desarrollaremos las capacidades de creatividad suficientes para halla una oportunidad de que nuestro proyecto de aflote un gran salto y pueda ser pronto para el conocimiento de la gente, para ello aclararemos su uso, el porqué se escojió, bajo que criterios nació la idea y en si dara a enterder que la oportunida aquí debe ser la semejanza a nuestro proyecto.</p>
                   </div>
 
                                   <div class="think__details__extra">
