--- a/Actividades/Actividad5.html
+++ b/Actividades/Actividad5.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
-                    <p class="think__details__extra__description">En esta actividad comenzaremos el primer paso para poder crear de forma material nuestro producto, con lo que haemos conocer a nuestros futuros clientes lo que venimos presentando.</p>
+                    <p class="think__details__extra__description">En esta actividad daremos el primer paso para poder crear de forma material nuestro producto, con lo que haemos conocer a nuestros futuros clientes lo que venimos presentando.</p>
 
                 </div>
 
